# garage-reg

./: .editorconfig  .env.example  .gitattributes  .gitignore  ADMIN_APPLICATION_COMPLETE.md  ALEMBIC_SEED_COMPLETE.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_SYSTEM_COMPLETE.md  AUDIT_SYSTEM_COMPLETE.md  AUTHENTICATION_SUMMARY.md  AUTOMATED_TESTS_COMPLETE.md  DEMO_SCENARIO_COMPLETE.md  DESIGN_SYSTEM_COMPLETE.md  ERROR_HANDLING_COMPLETE.md  FETCH_WRAPPER_COMPLETE.md  INFRASTRUCTURE_COMPLETE.md  INSPECTION_SYSTEM_COMPLETE.md  INVENTORY_SYSTEM_COMPLETE.md  LABEL_GENERATION_COMPLETE.md  LICENSE  MAINTENANCE_PLANNING_COMPLETE.md  MULTILINGUAL_COMPLETE.md  NEXT_APP_SCAFFOLD_COMPLETE.md  NOTIFICATION_SERVICE_COMPLETE.md  NOTIFICATION_SYSTEM_COMPLETE.md  OPENAPI_SDK_COMPLETE.md  PHOTO_UPLOAD_SYSTEM.md  QR_LABELS_COMPLETE.md  QR_LABELS_IMPLEMENTATION_COMPLETE.md  README.md  SDK_DOCUMENTATION.md  SECURITY_CHECKLIST_COMPLETE.md  SECURITY_IMPLEMENTATION.md  SETUP_COMPLETE.md  STRUCTURE_API_SUMMARY.md  complete_multilingual_system.py  demo_alembic_workflow.py  demo_scenario_data.json  demo_scenario_generator.py  demo_scenario_simple.py  (+23 more)
backend/: .coveragerc  .env.example  .env.test  Dockerfile  INTEGRATION_SYSTEM_COMPLETE.md  README.md  SYNC_SYSTEM_COMPLETE.md  WYSIWYG_IMPLEMENTATION_PLAN.md  acceptance_test_final.py  alembic.ini  api_routes.py  check_db.py  complete_audit_demo.py  complete_openapi.py  coverage-comprehensive.xml  create_document_templates.py  create_simple_templates.py  create_simple_test_data.py  create_sqlite_templates.py  create_test_data.py  data_cli.py  demo_analytics_complete.py  demo_audit_system.py  demo_error_handling.py  demo_final_export_import.py  demo_integration_system.py  demo_inventory.py  demo_notifications.py  demo_security_complete.py  demo_wysiwyg_simple.py  demo_wysiwyg_templates.py  e2e_test_server.py  (+43 more)
sdk/python/: README.md  pyproject.toml
sdk/python/garagereg_client/: __init__.py  client.py  exceptions.py  models.py
(+464 files in other folders)
